name:                lfp-tictactoe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mmisamore/lfp-tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Misamore 
maintainer:          example@example.com
copyright:           2017 Michael Misamore 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lfp-tictactoe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lfp-tictactoe
  default-language:    Haskell2010

test-suite lfp-tictactoe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lfp-tictactoe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lfp-tictactoe
